<resources>
    <string name="app_name">Movie App</string>
    <string name="title_activity_movie_details">MovieDetailsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="age">%1$d+</string>

    <string name="genre">Action, Adventure, Fantasy</string>
    <string name="reviews">%1$s Reviews</string>
    <string name="storyline">Storyline</string>
    <string name="description">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos\' actions and restore balance to the universe.</string>
    <string name="cast">Cast</string>
    <string name="downey">Robert Downey Jr.</string>
    <string name="evans">Chris Evans</string>
    <string name="ruffalo">Mark Ruffalo</string>
    <string name="chris_hemsworth">Chris Hemsworth</string>
    <string name="movies_list">Movies list</string>
    <string name="movies_list_film_time">%1$d MIN</string>

<!--    films-->
    <string name="avengers_end_game">Avengers: End Game</string>
    <string name="tenet">Tenet</string>
    <string name="black_widow">Black widow</string>
    <string name="wonder_women">Wonder women</string>
    <string name="error_movie_not_found">Sorry! Something went wrong - we can not find this movie in the system.</string>


    <string name="title_label">Find Movies, Tv series, and more…</string>
    <string name="film_label">Name of film</string>




    <string name="menu_main">Main</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_movie">Movie</string>
    <string name="greeting_title">Hello</string>
    <string name="search">Search</string>
    <string name="most_popular">Most popular</string>
    <string name="upcoming_releases">Upcoming releases</string>
    <string name="movie_menu_genres">Genres</string>
    <string name="movie_menu_tv_series">Tv series</string>
    <string name="movie_menu_movies">Movies</string>
    <string name="movie_menu_in_theatre">In Theatre</string>
</resources>