<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/movies_list_item_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_rounded_stroke_rect_background_dark_blue"
    android:elevation="@dimen/cardview_default_elevation"
    app:layout_constraintTop_toBottomOf="@id/movies_list_header_layout"
    app:layout_constraintStart_toStartOf="@id/root_left_guideline"
    android:layout_margin="6dp">

    <ImageView
        android:id="@+id/movies_list_header_image"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        app:layout_constraintDimensionRatio="1:1.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/movie_avengers" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/movie_list_mask"
        app:layout_constraintTop_toTopOf="@+id/movies_list_header_image"
        app:layout_constraintBottom_toBottomOf="@+id/movies_list_header_image"
        app:layout_constraintStart_toStartOf="@+id/movies_list_header_image"
        app:layout_constraintEnd_toEndOf="@+id/movies_list_header_image"
        />

    <TextView
        android:id="@+id/movies_list_age"
        android:layout_width="@dimen/movies_list_allowed_age_space"
        android:layout_height="@dimen/movies_list_allowed_age_space"
        android:layout_margin="@dimen/spacing_2x"
        android:gravity="center"
        android:textSize="@dimen/text_size_body"
        android:textColor="@color/white"
        tools:text="13+"
        android:background="@drawable/shape_heavy_rounded_rect_background_dark_blue"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <ImageView
        android:id="@+id/iv_like"
        android:layout_width="@dimen/movies_list_favorite_icon_space"
        android:layout_height="@dimen/movies_list_favorite_icon_space"
        android:layout_margin="@dimen/spacing_2x"
        app:srcCompat="@drawable/ic_like"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/movies_list_film_genre_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center_vertical|start"
        android:textSize="@dimen/text_size_description"
        android:textColor="@color/radical_red"
        android:text="@string/genre"
        app:layout_constraintBottom_toTopOf="@+id/movie_reviews_count_text"
        app:layout_constraintStart_toStartOf="parent"
        />

    <ImageView
        android:id="@+id/movie_rating_star1_image"
        android:layout_width="@dimen/movies_list_rating_star_icon_space"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/spacing_2x"
        android:padding="@dimen/spacing_0_5x"
        android:src="@drawable/ic_star_icon"
        app:layout_constraintTop_toTopOf="@+id/movie_reviews_count_text"
        app:layout_constraintBottom_toBottomOf="@+id/movie_reviews_count_text"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/movie_rating_star2_image"
        android:layout_width="@dimen/movies_list_rating_star_icon_space"
        android:layout_height="0dp"
        android:padding="@dimen/spacing_0_5x"
        android:src="@drawable/ic_star_icon"
        app:layout_constraintTop_toTopOf="@+id/movie_rating_star1_image"
        app:layout_constraintBottom_toBottomOf="@+id/movie_rating_star1_image"
        app:layout_constraintStart_toEndOf="@+id/movie_rating_star1_image"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/movie_rating_star3_image"
        android:layout_width="@dimen/movies_list_rating_star_icon_space"
        android:layout_height="0dp"
        android:padding="@dimen/spacing_0_5x"
        android:src="@drawable/ic_star_icon"
        app:layout_constraintTop_toTopOf="@+id/movie_rating_star1_image"
        app:layout_constraintBottom_toBottomOf="@+id/movie_rating_star1_image"
        app:layout_constraintStart_toEndOf="@+id/movie_rating_star2_image"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/movie_rating_star4_image"
        android:layout_width="@dimen/movies_list_rating_star_icon_space"
        android:layout_height="0dp"
        android:padding="@dimen/spacing_0_5x"
        android:src="@drawable/ic_star_icon"
        app:layout_constraintTop_toTopOf="@+id/movie_rating_star1_image"
        app:layout_constraintBottom_toBottomOf="@+id/movie_rating_star1_image"
        app:layout_constraintStart_toEndOf="@+id/movie_rating_star3_image"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/movie_rating_star5_image"
        android:layout_width="@dimen/movies_list_rating_star_icon_space"
        android:layout_height="0dp"
        android:padding="@dimen/spacing_0_5x"
        android:src="@drawable/ic_star_icon"
        app:tint="@color/storm_gray"
        app:layout_constraintTop_toTopOf="@+id/movie_rating_star1_image"
        app:layout_constraintBottom_toBottomOf="@+id/movie_rating_star1_image"
        app:layout_constraintStart_toEndOf="@+id/movie_rating_star4_image"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/movie_reviews_count_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_2x"
        android:layout_marginBottom="@dimen/spacing_2x"
        android:gravity="center_vertical|start"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textSize="@dimen/text_size_description"
        android:textColor="@color/storm_gray"
        android:text="@string/reviews"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/movie_rating_star5_image"
        app:layout_constraintBottom_toBottomOf="@+id/movies_list_header_image"
        />

    <TextView
        android:id="@+id/movies_list_film_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center_vertical|start"
        android:textStyle="bold"
        android:textSize="@dimen/text_size_sub_title"
        android:textColor="@color/white"
        android:text="@string/avengers_end_game"
        app:layout_constraintTop_toBottomOf="@+id/movies_list_header_image"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/movies_list_film_time_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center_vertical|start"
        android:textSize="@dimen/text_size_description"
        android:textColor="@color/storm_gray"
        android:text="@string/movies_list_film_time"
        app:layout_constraintTop_toBottomOf="@+id/movies_list_film_name_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>